# RecallGraph

./: .gitignore  .mcp.json  .pre-commit-config.yaml  2.0.0  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEEDBACK_IMPLEMENTATION.md  Issue 2 — Flaky Performance Assertion  LICENSE  LOCAL_CI_GUIDE.md  MANIFEST.in  MCP_ROADMAP.md  PRE-PUSH-GUIDE.md  README.md  ROADMAP.md  SECURITY.md  Step 1 — Run ruff yourself  Step 2 — Auto-fix what ruff can  Step 3 — Check formatting  claude_desktop_config.json  cline_mcp_settings.json  example_usage.ps1  fix_unicode.py  mypy.ini  pre-push.ps1  pyproject.toml  quick_test.py  requirements.txt  run_manual_tests.py  run_memograph_mcp.bat  server.json  setup.py  simple_test.py  smithery.json  smithery.yaml  test.md  (+4 more)
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  TOPICS.md
docs/: ARCHITECTURE.md  BADGES.md  FAQ.md  GAM_QUICKSTART.md  INSTALLATION.md  LITELLM_MIGRATION_GUIDE.md  README.md  SMART_AUTO_ORGANIZATION.md
examples/: ai_auto_tagger_usage.py  ai_complete_workflow.py  ai_gap_detector_usage.py  ai_link_suggester_usage.py  basic_usage.py  cli_workflow.sh  gam_usage.py  graph_traversal.py  litellm_usage.py  memory_types.py  smart_auto_organization.py
memograph/: __init__.py  __main__.py  cli.py  cli_batch_helpers.py  cli_helpers.py  cli_infrastructure_helpers.py  mcp_setup.py
memories.md/: check.md  cli-test.md  interactive-test.md  meeting-notes-2.md  meeting-notes.md  python-best-practices-2.md  python-best-practices-3.md  python-best-practices.md  qty.md
(+215 files in other folders)
