[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemo-vault"
version = "0.0.1"

authors = [
  { name="Mnemo Contributors", email="author@example.com" },
]
description = "A personal memory vault for LLMs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.39.0"]

[project.scripts]
mnemo = "mnemo.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mnemo*"]
namespaces = false
